--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,19 @@
 	margin-top: 50px;
 }
 
+.subMenu {
+	float: left;
+	width: 170px;
+	margin-top: 50px;
+	margin-left: 50px;
+}
+
+.rightContent {
+	float: left;
+	width: 1100px;
+	margin-left: 50px;
+}
+
 .ass_name {
 	width: 300px;
 }
@@ -60,7 +73,7 @@
 }
 
 .assignmentTable {
-	padding-left: 100px;
+	
 }
 
 .edit-btn {
