--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,7 +34,7 @@
 
 
 .task_numb { width: 35px; }
-.task_time { min-width: 160px; }
+.task_time { min-width: 120px; }
 .task_param { min-width: 150px; }
 .task_comment { min-width: 200px; }
 .task_value { min-width: 100px; }
@@ -53,9 +53,44 @@
 
 .dataResult { margin-left: 50px; }
 .valueComment { width: 270px; }
-.btnIgnore { margin-top: 5px; }
 
-.table_name { margin-left: 30px; }
+.dataRow {
+	width: 90%;
+	margin-left: 40px;
+	margin-top: 30px;
+	padding-bottom: 20px;
+	padding-top: 10px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #DCDBDB;
+}
+
+.dataStatusSucess {
+	float: right;
+	width: 120px;
+	background-color: #10D610;
+	padding: 8px;
+	text-align: center;
+}
+
+.dataAssName {
+	font-size: 20px;
+	font-weight: bold;
+	margin-bottom: 6px;
+}
+
+.dataAssDescr {
+	font-size: 18px;
+	font-weight: bold;
+	margin-bottom: 7px;
+	color: #7D7D7D;
+}
+
+.dataActionButtons {
+	margin: auto;
+	width: 300px;
+}
+
 .login-login {
 	width: 400px;
 	display: block;
